hermes/vendor/datatest-stable/tests/compile-fail/test-out-of-order.rs
datatest_stable::harness! {
    { root = "tests/files", pattern = r"^.*(?<!\.skip)\.txt$" }
}
